# breezecpp.old

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  cmake2.sh  compile_commands.json
CMake/: ExternalBoostLog.cmake  ExternalGLFW.cmake  ExternalGlad.cmake
examples/asio/: client.cpp  server.cpp
examples/ecs/: main.cpp
examples/graphics/: main.cpp
examples/handlevec/: handlevec.cpp
examples/sdl2/: main.cpp
src/ecs/: .gitmodules  cmake.sh
src/ecs/core/: core.hpp
src/ecs/src/core/: core.hpp
src/ecs/src/util/: util.hpp
src/ecs/util/: util.hpp
src/graphics/: graphics.hpp
src/math/: math.hpp
src/network/: network.hpp
src/util/container/: handlvec.hpp
src/window/: window.hpp
